@@ -4,6 +4,7 @@ kickseed (0.46) UNRELEASED; urgency=low
   * Update copyright dates.
   * Remove Ubuntu-specific hostname in setup/net.
   * Unbrand an Ubuntu-specific error message.
+  * Remove some old base-config cruft.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 18 Jun 2007 22:22:58 +0100
 
